--- a/public/sleek/404.html
+++ b/public/sleek/404.html
@@ -15,17 +15,17 @@
 
 
   <!-- PLUGINS CSS STYLE -->
-  <link href="assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
+  <link href="../assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
 
   
 
   <!-- SLEEK CSS -->
-  <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.css" />
+  <link id="sleek-css" rel="stylesheet" href="../assets/css/sleek.css" />
 
   
 
   <!-- FAVICON -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" />
+  <link href="../assets/img/favicon.png" rel="shortcut icon" />
 
   
 
@@ -37,7 +37,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="assets/plugins/nprogress/nprogress.js"></script>
+  <script src="../assets/plugins/nprogress/nprogress.js"></script>
 </head>
 
 
@@ -739,13 +739,13 @@
                   <!-- User Account -->
                   <li class="dropdown user-menu">
                     <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                      <img src="assets/img/user/user.png" class="user-image" alt="User Image" />
+                      <img src="../assets/img/user/user.png" class="user-image" alt="User Image" />
                       <span class="d-none d-lg-inline-block">Abdus Salam</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <!-- User image -->
                       <li class="dropdown-header">
-                        <img src="assets/img/user/user.png" class="img-circle" alt="User Image" />
+                        <img src="../assets/img/user/user.png" class="img-circle" alt="User Image" />
                         <div class="d-inline-block">
                           Abdus Salam <small class="pt-1">iamabdus@gmail.com</small>
                         </div>
@@ -790,7 +790,7 @@
 									<a href="index.html" class="btn btn-primary btn-pill">Back to Home</a>
 								</div>
 								<div class="col-xl-6 pt-5 pt-xl-0 text-center">
-									<img src="assets/img/lightenning.png" class="img-responsive" alt="Error Page Image">
+									<img src="../assets/img/lightenning.png" class="img-responsive" alt="Error Page Image">
 								</div>
 							</div>
 						</div>
@@ -823,16 +823,16 @@
     </div>
   </div>
 
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
+  <script src="../assets/plugins/jquery/jquery.min.js"></script>
 
 
 
-<script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
-<script src="assets/plugins/jekyll-search.min.js"></script>
+<script src="../assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
+<script src="../assets/plugins/jekyll-search.min.js"></script>
 
 
 
-<script src="assets/js/sleek.bundle.js"></script>
+<script src="../assets/js/sleek.bundle.js"></script>
 
 </body>
 
