--- a/public/sleek/card.html
+++ b/public/sleek/card.html
@@ -15,17 +15,17 @@
 
 
   <!-- PLUGINS CSS STYLE -->
-  <link href="assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
+  <link href="../assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
 
   
 
   <!-- SLEEK CSS -->
-  <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.css" />
+  <link id="sleek-css" rel="stylesheet" href="../assets/css/sleek.css" />
 
   
 
   <!-- FAVICON -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" />
+  <link href="../assets/img/favicon.png" rel="shortcut icon" />
 
   
 
@@ -37,7 +37,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="assets/plugins/nprogress/nprogress.js"></script>
+  <script src="../assets/plugins/nprogress/nprogress.js"></script>
 </head>
 
 
@@ -739,13 +739,13 @@
                   <!-- User Account -->
                   <li class="dropdown user-menu">
                     <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                      <img src="assets/img/user/user.png" class="user-image" alt="User Image" />
+                      <img src="../assets/img/user/user.png" class="user-image" alt="User Image" />
                       <span class="d-none d-lg-inline-block">Abdus Salam</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <!-- User image -->
                       <li class="dropdown-header">
-                        <img src="assets/img/user/user.png" class="img-circle" alt="User Image" />
+                        <img src="../assets/img/user/user.png" class="img-circle" alt="User Image" />
                         <div class="d-inline-block">
                           Abdus Salam <small class="pt-1">iamabdus@gmail.com</small>
                         </div>
@@ -813,7 +813,7 @@
 										</div>
 										<div class="col-md-6 col-xl-3">
 											<div class="card mb-4">
-												<img class="card-img-top" src="assets/img/elements/cc1.jpg">
+												<img class="card-img-top" src="../assets/img/elements/cc1.jpg">
 												<div class="card-body">
 													<h5 class="card-title text-primary">Card Title</h5>
 													<p class="card-text pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor </p>
@@ -824,7 +824,7 @@
 										<div class="col-md-6 col-xl-3">
 											<div class="card mb-4">
 												<div class="card-body">
-													<img class="card-img-top mb-4 rounded" src="assets/img/elements/cc1a.jpg">
+													<img class="card-img-top mb-4 rounded" src="../assets/img/elements/cc1a.jpg">
 													<h5 class="card-title text-primary">Card Title</h5>
 													<p class="card-text pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor </p>
 													<a href="#" class="btn btn-outline-primary">Go somewhere</a>
@@ -834,7 +834,7 @@
 										<div class="col-md-6 col-xl-3">
 											<div class="card  mb-4 p-0">
 												<h5 class="card-title text-primary pt-4 pb-2 px-3">Card Title</h5>
-												<img class="card-img rounded-0" src="assets/img/elements/cc1b.jpg">
+												<img class="card-img rounded-0" src="../assets/img/elements/cc1b.jpg">
 												<div class="card-body">
 													<p class="card-text pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor </p>
 													<a href="#" class="btn btn-link px-0">Card Link</a>
@@ -846,7 +846,7 @@
 												<div class="card-body">
 													<h5 class="card-title text-primary mb-1">Card Title</h5>
 													<p class="pb-3">Sub-heading text</p>
-													<img class="mb-4 card-img" src="assets/img/elements/cc1c.jpg">
+													<img class="mb-4 card-img" src="../assets/img/elements/cc1c.jpg">
 													<p class="card-text pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor </p>
 													<a href="#" class="btn btn-link px-0">Card Link</a>
 												</div>
@@ -907,7 +907,7 @@
 										</div>
 										<div class="col-md-12 col-lg-6 col-xl-4">
 											<div class="card mb-4 bg-gradient-dark">
-												<img class="card-img-top" src="assets/img/elements/cc2a.jpg">
+												<img class="card-img-top" src="../assets/img/elements/cc2a.jpg">
 												<div class="card-img-overlay absolute-bottom">
 													<h5 class="card-title text-primary text-white">Card Title</h5>
 													<p class="card-text text-white pb-4 pt-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor </p>
@@ -917,7 +917,7 @@
 										</div>
 										<div class="col-md-12 col-lg-6 col-xl-4">
 											<div class="card mb-4">
-												<img class="card-img-top" src="assets/img/elements/cc2b.jpg">
+												<img class="card-img-top" src="../assets/img/elements/cc2b.jpg">
 												<div class="card-img-overlay absolute-middle">
 													<h5 class="card-title text-primary">Card Title</h5>
 													<p class="card-text pb-4 pt-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor </p>
@@ -927,7 +927,7 @@
 										</div>
 										<div class="col-md-12 col-lg-6 col-xl-4">
 											<div class="card mb-4">
-												<img class="card-img-top" src="assets/img/elements/cc2c.jpg">
+												<img class="card-img-top" src="../assets/img/elements/cc2c.jpg">
 												<div class="card-img-overlay">
 													<h5 class="card-title text-primary">Card Title</h5>
 													<p class="card-text pb-4 pt-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor </p>
@@ -947,7 +947,7 @@
 									<p class="mb-5">Need a set of equal width and height cards that aren’t attached to one another? Use card decks. Read bootstrap documentaion for <a href="https://getbootstrap.com/docs/4.1/components/card/#card-decks" target="_blank"> More Details	</a></p>
 									<div class="card-deck">
 										<div class="card">
-											<img class="card-img-top" src="assets/img/elements/cc3a.jpg" alt="Card image cap">
+											<img class="card-img-top" src="../assets/img/elements/cc3a.jpg" alt="Card image cap">
 											<div class="card-body">
 												<h5 class="card-title text-primary">Card Title</h5>
 												<p class="card-text pb-3">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little
@@ -958,7 +958,7 @@
 											</div>
 										</div>
 										<div class="card">
-											<img class="card-img-top" src="assets/img/elements/cc3b.jpg" alt="Card image cap">
+											<img class="card-img-top" src="../assets/img/elements/cc3b.jpg" alt="Card image cap">
 											<div class="card-body">
 												<h5 class="card-title text-primary">Card Title</h5>
 												<p class="card-text pb-3">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -968,7 +968,7 @@
 											</div>
 										</div>
 										<div class="card">
-											<img class="card-img-top" src="assets/img/elements/cc3c.jpg" alt="Card image cap">
+											<img class="card-img-top" src="../assets/img/elements/cc3c.jpg" alt="Card image cap">
 											<div class="card-body">
 												<h5 class="card-title text-primary">Card Title</h5>
 												<p class="card-text pb-3">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer
@@ -1023,7 +1023,7 @@
 									<p class="mb-5">Use card groups to render cards as a single, attached element with equal width and height columns. Card groups use	display: flex; to achieve their uniform sizing. Read bootstrap documentaion for <a href="https://getbootstrap.com/docs/4.1/components/card/#card-groups" target="_blank"> more details.</a></p>
 									<div class="card-group">
 										<div class="card">
-											<img class="card-img-top" src="assets/img/elements/cc4a.jpg" alt="Card image cap">
+											<img class="card-img-top" src="../assets/img/elements/cc4a.jpg" alt="Card image cap">
 											<div class="card-body">
 												<h5 class="card-title text-primary">Card Title</h5>
 												<p class="card-text pb-4">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
@@ -1034,7 +1034,7 @@
 											</div>
 										</div>
 										<div class="card">
-											<img class="card-img-top" src="assets/img/elements/cc4b.jpg" alt="Card image cap">
+											<img class="card-img-top" src="../assets/img/elements/cc4b.jpg" alt="Card image cap">
 											<div class="card-body">
 												<h5 class="card-title text-primary">Card Title</h5>
 												<p class="card-text pb-4">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -1044,7 +1044,7 @@
 											</div>
 										</div>
 										<div class="card">
-											<img class="card-img-top" src="assets/img/elements/cc4c.jpg" alt="Card image cap">
+											<img class="card-img-top" src="../assets/img/elements/cc4c.jpg" alt="Card image cap">
 											<div class="card-body">
 												<h5 class="card-title text-primary">Card Title</h5>
 												<p class="card-text pb-4">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer
@@ -1172,16 +1172,16 @@
     </div>
   </div>
 
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
+  <script src="../assets/plugins/jquery/jquery.min.js"></script>
 
 
 
-<script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
-<script src="assets/plugins/jekyll-search.min.js"></script>
+<script src="../assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
+<script src="../assets/plugins/jekyll-search.min.js"></script>
 
 
 
-<script src="assets/js/sleek.bundle.js"></script>
+<script src="../assets/js/sleek.bundle.js"></script>
 
 </body>
 
