--- a/public/sleek/carousel.html
+++ b/public/sleek/carousel.html
@@ -15,17 +15,17 @@
 
 
   <!-- PLUGINS CSS STYLE -->
-  <link href="assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
+  <link href="../assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
 
   
 
   <!-- SLEEK CSS -->
-  <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.css" />
+  <link id="sleek-css" rel="stylesheet" href="../assets/css/sleek.css" />
 
   
 
   <!-- FAVICON -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" />
+  <link href="../assets/img/favicon.png" rel="shortcut icon" />
 
   
 
@@ -37,7 +37,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="assets/plugins/nprogress/nprogress.js"></script>
+  <script src="../assets/plugins/nprogress/nprogress.js"></script>
 </head>
 
 
@@ -739,13 +739,13 @@
                   <!-- User Account -->
                   <li class="dropdown user-menu">
                     <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                      <img src="assets/img/user/user.png" class="user-image" alt="User Image" />
+                      <img src="../assets/img/user/user.png" class="user-image" alt="User Image" />
                       <span class="d-none d-lg-inline-block">Abdus Salam</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <!-- User image -->
                       <li class="dropdown-header">
-                        <img src="assets/img/user/user.png" class="img-circle" alt="User Image" />
+                        <img src="../assets/img/user/user.png" class="img-circle" alt="User Image" />
                         <div class="d-inline-block">
                           Abdus Salam <small class="pt-1">iamabdus@gmail.com</small>
                         </div>
@@ -814,10 +814,10 @@
 											<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 												<div class="carousel-inner">
 													<div class="carousel-item active">
-														<img class="d-block w-100" src="assets/img/elements/slide1.jpg" alt="First slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide1.jpg" alt="First slide">
 													</div>
 													<div class="carousel-item">
-														<img class="d-block w-100" src="assets/img/elements/slide2.jpg" alt="Second slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide2.jpg" alt="Second slide">
 													</div>
 												</div>
 											</div>
@@ -834,10 +834,10 @@
 											<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 												<div class="carousel-inner">
 													<div class="carousel-item active">
-														<img class="d-block w-100" src="assets/img/elements/slide2.jpg" alt="First slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide2.jpg" alt="First slide">
 													</div>
 													<div class="carousel-item">
-														<img class="d-block w-100" src="assets/img/elements/slide1.jpg" alt="Second slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide1.jpg" alt="Second slide">
 													</div>
 												</div>
 												<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -867,10 +867,10 @@
 												</ol>
 												<div class="carousel-inner">
 													<div class="carousel-item active">
-														<img class="d-block w-100" src="assets/img/elements/slide3.jpg" alt="First slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide3.jpg" alt="First slide">
 													</div>
 													<div class="carousel-item">
-														<img class="d-block w-100" src="assets/img/elements/slide4.jpg" alt="Second slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide4.jpg" alt="Second slide">
 													</div>
 												</div>
 												<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -899,14 +899,14 @@
 												</ol>
 												<div class="carousel-inner">
 													<div class="carousel-item bg-gradient-dark active">
-														<img class="d-block w-100" src="assets/img/elements/slide4.jpg" alt="First slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide4.jpg" alt="First slide">
 														<div class="carousel-caption d-none d-md-block">
 															<h5>First Title Goes Here</h5>
 															<p>Praesent commodo cursus magna vel scelerisque</p>
 														</div>
 													</div>
 													<div class="carousel-item bg-gradient-dark">
-														<img class="d-block w-100" src="assets/img/elements/slide3.jpg" alt="Second slide">
+														<img class="d-block w-100" src="../assets/img/elements/slide3.jpg" alt="Second slide">
 														<div class="carousel-caption d-none d-md-block">
 															<h5>Second Title Goes Here</h5>
 															<p>Praesent commodo cursus magna vel scelerisque</p>
@@ -941,7 +941,7 @@
 											<div class="carousel-item active">
 												<div class="card border-0 text-center">
 													<div class="card-img-wrapper ">
-														<img src="assets/img/user/u6.jpg" alt="" class="img-fluid rounded-circle">
+														<img src="../assets/img/user/u6.jpg" alt="" class="img-fluid rounded-circle">
 													</div>
 													<div class="card-body">
 														<p>
@@ -955,7 +955,7 @@
 											<div class="carousel-item">
 												<div class="card border-0 text-center">
 													<div class="card-img-wrapper">
-														<img src="assets/img/user/u6.jpg" alt="" class="img-fluid rounded-circle">
+														<img src="../assets/img/user/u6.jpg" alt="" class="img-fluid rounded-circle">
 													</div>
 													<div class="card-body">
 														<p>
@@ -1007,16 +1007,16 @@
     </div>
   </div>
 
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
+  <script src="../assets/plugins/jquery/jquery.min.js"></script>
 
 
 
-<script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
-<script src="assets/plugins/jekyll-search.min.js"></script>
+<script src="../assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
+<script src="../assets/plugins/jekyll-search.min.js"></script>
 
 
 
-<script src="assets/js/sleek.bundle.js"></script>
+<script src="../assets/js/sleek.bundle.js"></script>
 
 </body>
 
