--- a/public/sleek/form-advance.html
+++ b/public/sleek/form-advance.html
@@ -15,11 +15,11 @@
 
 
   <!-- PLUGINS CSS STYLE -->
-  <link href="assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
+  <link href="../assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
 
   
   
-  <link href="assets/plugins/select2/css/select2.min.css" rel="stylesheet" />
+  <link href="../assets/plugins/select2/css/select2.min.css" rel="stylesheet" />
   
   
   
@@ -28,12 +28,12 @@
   
 
   <!-- SLEEK CSS -->
-  <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.css" />
+  <link id="sleek-css" rel="stylesheet" href="../assets/css/sleek.css" />
 
   
 
   <!-- FAVICON -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" />
+  <link href="../assets/img/favicon.png" rel="shortcut icon" />
 
   
 
@@ -45,7 +45,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="assets/plugins/nprogress/nprogress.js"></script>
+  <script src="../assets/plugins/nprogress/nprogress.js"></script>
 </head>
 
 
@@ -747,13 +747,13 @@
                   <!-- User Account -->
                   <li class="dropdown user-menu">
                     <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                      <img src="assets/img/user/user.png" class="user-image" alt="User Image" />
+                      <img src="../assets/img/user/user.png" class="user-image" alt="User Image" />
                       <span class="d-none d-lg-inline-block">Abdus Salam</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <!-- User image -->
                       <li class="dropdown-header">
-                        <img src="assets/img/user/user.png" class="img-circle" alt="User Image" />
+                        <img src="../assets/img/user/user.png" class="img-circle" alt="User Image" />
                         <div class="d-inline-block">
                           Abdus Salam <small class="pt-1">iamabdus@gmail.com</small>
                         </div>
@@ -909,24 +909,24 @@
     </div>
   </div>
 
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
+  <script src="../assets/plugins/jquery/jquery.min.js"></script>
 
 
 
-<script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
-<script src="assets/plugins/jekyll-search.min.js"></script>
+<script src="../assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
+<script src="../assets/plugins/jekyll-search.min.js"></script>
 
 
 
-<script src="assets/plugins/select2/js/select2.min.js"></script>
+<script src="../assets/plugins/select2/js/select2.min.js"></script>
   
 
 
-<script src="assets/plugins/jquery-mask-input/jquery.mask.min.js"></script>
+<script src="../assets/plugins/jquery-mask-input/jquery.mask.min.js"></script>
   
 
 
-<script src="assets/js/sleek.bundle.js"></script>
+<script src="../assets/js/sleek.bundle.js"></script>
 
 </body>
 
