--- a/public/sleek/general-widget.html
+++ b/public/sleek/general-widget.html
@@ -15,21 +15,21 @@
 
 
   <!-- PLUGINS CSS STYLE -->
-  <link href="assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
+  <link href="../assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
 
   
   
-  <link href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.css" rel="stylesheet" />
+  <link href="../assets/plugins/jvectormap/jquery-jvectormap-2.0.3.css" rel="stylesheet" />
   
   
 
   <!-- SLEEK CSS -->
-  <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.css" />
+  <link id="sleek-css" rel="stylesheet" href="../assets/css/sleek.css" />
 
   
 
   <!-- FAVICON -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" />
+  <link href="../assets/img/favicon.png" rel="shortcut icon" />
 
   
 
@@ -41,7 +41,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="assets/plugins/nprogress/nprogress.js"></script>
+  <script src="../assets/plugins/nprogress/nprogress.js"></script>
 </head>
 
 
@@ -743,13 +743,13 @@
                   <!-- User Account -->
                   <li class="dropdown user-menu">
                     <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                      <img src="assets/img/user/user.png" class="user-image" alt="User Image" />
+                      <img src="../assets/img/user/user.png" class="user-image" alt="User Image" />
                       <span class="d-none d-lg-inline-block">Abdus Salam</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <!-- User image -->
                       <li class="dropdown-header">
-                        <img src="assets/img/user/user.png" class="img-circle" alt="User Image" />
+                        <img src="../assets/img/user/user.png" class="img-circle" alt="User Image" />
                         <div class="d-inline-block">
                           Abdus Salam <small class="pt-1">iamabdus@gmail.com</small>
                         </div>
@@ -1177,7 +1177,7 @@
 														<td >
 															<div class="media">
 																<div class="media-image mr-3 rounded-circle">
-																	<a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u1.jpg" alt="customer image"></a>
+																	<a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u1.jpg" alt="customer image"></a>
 																</div>
 																<div class="media-body align-self-center">
 																	<a href="profile.html">
@@ -1194,7 +1194,7 @@
 														<td >
 															<div class="media">
 																<div class="media-image mr-3 rounded-circle">
-																	<a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u2.jpg" alt="customer image"></a>
+																	<a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u2.jpg" alt="customer image"></a>
 																</div>
 																<div class="media-body align-self-center">
 																	<a href="profile.html">
@@ -1211,7 +1211,7 @@
 														<td >
 															<div class="media">
 																<div class="media-image mr-3 rounded-circle">
-																	<a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u3.jpg" alt="customer image"></a>
+																	<a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u3.jpg" alt="customer image"></a>
 																</div>
 																<div class="media-body align-self-center">
 																	<a href="profile.html">
@@ -1228,7 +1228,7 @@
 														<td >
 															<div class="media">
 																<div class="media-image mr-3 rounded-circle">
-																	<a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u4.jpg" alt="customer image"></a>
+																	<a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u4.jpg" alt="customer image"></a>
 																</div>
 																<div class="media-body align-self-center">
 																	<a href="profile.html">
@@ -1245,7 +1245,7 @@
 														<td >
 															<div class="media">
 																<div class="media-image mr-3 rounded-circle">
-																	<a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u5.jpg" alt="customer image"></a>
+																	<a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u5.jpg" alt="customer image"></a>
 																</div>
 																<div class="media-body align-self-center">
 																	<a href="profile.html">
@@ -1371,7 +1371,7 @@
 											<h2>Profile</h2>
 										</div>
 										<div class="card-body text-center">
-											<img class="rounded-circle d-flex mx-auto" src="assets/img/user/u6.jpg" alt="user image">
+											<img class="rounded-circle d-flex mx-auto" src="../assets/img/user/u6.jpg" alt="user image">
 											<h4 class="py-2 text-dark">Albrecht Straub</h4>
 											<p>Albrecht.straub@gmail.com</p>
 											<a class="btn btn-primary btn-pill btn-lg my-4" href="#">Follow</a>
@@ -1422,21 +1422,21 @@
     </div>
   </div>
 
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
+  <script src="../assets/plugins/jquery/jquery.min.js"></script>
 
 
 
-<script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
-<script src="assets/plugins/jekyll-search.min.js"></script>
+<script src="../assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
+<script src="../assets/plugins/jekyll-search.min.js"></script>
 
 
 
-<script src="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
-<script src="assets/plugins/jvectormap/jquery-jvectormap-world-mill.js"></script>
+<script src="../assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
+<script src="../assets/plugins/jvectormap/jquery-jvectormap-world-mill.js"></script>
   
 
 
-<script src="assets/js/sleek.bundle.js"></script>
+<script src="../assets/js/sleek.bundle.js"></script>
 
 </body>
 
