--- a/public/sleek/rtl.html
+++ b/public/sleek/rtl.html
@@ -15,7 +15,7 @@
 
 
   <!-- PLUGINS CSS STYLE -->
-  <link href="assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
+  <link href="../assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
 
   
   
@@ -23,21 +23,21 @@
   
   
   
-  <link href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.css" rel="stylesheet" />
+  <link href="../assets/plugins/jvectormap/jquery-jvectormap-2.0.3.css" rel="stylesheet" />
   
   
   
-  <link href="assets/plugins/daterangepicker/daterangepicker.css" rel="stylesheet" />
+  <link href="../assets/plugins/daterangepicker/daterangepicker.css" rel="stylesheet" />
   
   
 
   <!-- SLEEK CSS -->
-  <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.rtl.css" />
+  <link id="sleek-css" rel="stylesheet" href="../assets/css/sleek.rtl.css" />
 
   
 
   <!-- FAVICON -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" />
+  <link href="../assets/img/favicon.png" rel="shortcut icon" />
 
   
 
@@ -49,7 +49,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="assets/plugins/nprogress/nprogress.js"></script>
+  <script src="../assets/plugins/nprogress/nprogress.js"></script>
 </head>
 
 
@@ -751,13 +751,13 @@
                   <!-- User Account -->
                   <li class="dropdown user-menu">
                     <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                      <img src="assets/img/user/user.png" class="user-image" alt="User Image" />
+                      <img src="../assets/img/user/user.png" class="user-image" alt="User Image" />
                       <span class="d-none d-lg-inline-block">Abdus Salam</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <!-- User image -->
                       <li class="dropdown-header">
-                        <img src="assets/img/user/user.png" class="img-circle" alt="User Image" />
+                        <img src="../assets/img/user/user.png" class="img-circle" alt="User Image" />
                         <div class="d-inline-block">
                           Abdus Salam <small class="pt-1">iamabdus@gmail.com</small>
                         </div>
@@ -1389,7 +1389,7 @@
                             <td >
                               <div class="media">
                                 <div class="media-image mr-3 rounded-circle">
-                                  <a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u1.jpg" alt="customer image"></a>
+                                  <a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u1.jpg" alt="customer image"></a>
                                 </div>
                                 <div class="media-body align-self-center">
                                   <a href="profile.html"><h6 class="mt-0 text-dark font-weight-medium">Selena Wagner</h6></a>
@@ -1404,7 +1404,7 @@
                             <td >
                               <div class="media">
                                 <div class="media-image mr-3 rounded-circle">
-                                  <a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u2.jpg" alt="customer image"></a>
+                                  <a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u2.jpg" alt="customer image"></a>
                                 </div>
                                 <div class="media-body align-self-center">
                                   <a href="profile.html"><h6 class="mt-0 text-dark font-weight-medium">Walter Reuter</h6></a>
@@ -1419,7 +1419,7 @@
                             <td >
                               <div class="media">
                                 <div class="media-image mr-3 rounded-circle">
-                                  <a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u3.jpg" alt="customer image"></a>
+                                  <a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u3.jpg" alt="customer image"></a>
                                 </div>
                                 <div class="media-body align-self-center">
                                   <a href="profile.html"><h6 class="mt-0 text-dark font-weight-medium">Larissa Gebhardt</h6></a>
@@ -1434,7 +1434,7 @@
                             <td >
                               <div class="media">
                                 <div class="media-image mr-3 rounded-circle">
-                                  <a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u4.jpg" alt="customer image"></a>
+                                  <a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u4.jpg" alt="customer image"></a>
                                 </div>
                                 <div class="media-body align-self-center">
                                   <a href="profile.html"><h6 class="mt-0 text-dark font-weight-medium">Albrecht Straub</h6></a>
@@ -1449,7 +1449,7 @@
                             <td >
                               <div class="media">
                                 <div class="media-image mr-3 rounded-circle">
-                                  <a href="profile.html"><img class="rounded-circle w-45" src="assets/img/user/u5.jpg" alt="customer image"></a>
+                                  <a href="profile.html"><img class="rounded-circle w-45" src="../assets/img/user/u5.jpg" alt="customer image"></a>
                                 </div>
                                 <div class="media-body align-self-center">
                                   <a href="profile.html"><h6 class="mt-0 text-dark font-weight-medium">Leopold Ebert</h6></a>
@@ -1488,7 +1488,7 @@
                     <div class="card-body py-0">
                       <div class="media d-flex mb-5">
                         <div class="media-image align-self-center mr-3 rounded">
-                          <a href="#"><img src="assets/img/products/p1.jpg" alt="customer image"></a>
+                          <a href="#"><img src="../assets/img/products/p1.jpg" alt="customer image"></a>
                         </div>
                         <div class="media-body align-self-center">
                           <a href="#"><h6 class="mb-3 text-dark font-weight-medium"> Coach Swagger</h6></a>
@@ -1503,7 +1503,7 @@
 
                       <div class="media d-flex mb-5">
                         <div class="media-image align-self-center mr-3 rounded">
-                          <a href="#"><img src="assets/img/products/p2.jpg" alt="customer image"></a>
+                          <a href="#"><img src="../assets/img/products/p2.jpg" alt="customer image"></a>
                         </div>
                         <div class="media-body align-self-center">
                           <a href="#"><h6 class="mb-3 text-dark font-weight-medium"> Coach Swagger</h6></a>
@@ -1518,7 +1518,7 @@
 
                       <div class="media d-flex mb-5">
                         <div class="media-image align-self-center mr-3 rounded">
-                          <a href="#"><img src="assets/img/products/p3.jpg" alt="customer image"></a>
+                          <a href="#"><img src="../assets/img/products/p3.jpg" alt="customer image"></a>
                         </div>
                         <div class="media-body align-self-center">
                           <a href="#"><h6 class="mb-3 text-dark font-weight-medium"> Gucci Watch</h6></a>
@@ -1563,30 +1563,30 @@
     </div>
   </div>
 
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
+  <script src="../assets/plugins/jquery/jquery.min.js"></script>
 
 
 
-<script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
-<script src="assets/plugins/jekyll-search.min.js"></script>
+<script src="../assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
+<script src="../assets/plugins/jekyll-search.min.js"></script>
 
 
 
-<script src="assets/plugins/charts/Chart.min.js"></script>
+<script src="../assets/plugins/charts/Chart.min.js"></script>
   
 
 
-<script src="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
-<script src="assets/plugins/jvectormap/jquery-jvectormap-world-mill.js"></script>
+<script src="../assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
+<script src="../assets/plugins/jvectormap/jquery-jvectormap-world-mill.js"></script>
   
 
 
-<script src="assets/plugins/daterangepicker/moment.min.js"></script>
-<script src="assets/plugins/daterangepicker/daterangepicker.js"></script>
+<script src="../assets/plugins/daterangepicker/moment.min.js"></script>
+<script src="../assets/plugins/daterangepicker/daterangepicker.js"></script>
   
 
 
-<script src="assets/js/sleek.bundle.js"></script>
+<script src="../assets/js/sleek.bundle.js"></script>
 
 </body>
 
