--- a/public/sleek/user-profile.html
+++ b/public/sleek/user-profile.html
@@ -15,17 +15,17 @@
 
 
   <!-- PLUGINS CSS STYLE -->
-  <link href="assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
+  <link href="../assets/plugins/nprogress/nprogress.css" rel="stylesheet" />
 
   
 
   <!-- SLEEK CSS -->
-  <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.css" />
+  <link id="sleek-css" rel="stylesheet" href="../assets/css/sleek.css" />
 
   
 
   <!-- FAVICON -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" />
+  <link href="../assets/img/favicon.png" rel="shortcut icon" />
 
   
 
@@ -37,7 +37,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="assets/plugins/nprogress/nprogress.js"></script>
+  <script src="../assets/plugins/nprogress/nprogress.js"></script>
 </head>
 
 
@@ -739,13 +739,13 @@
                   <!-- User Account -->
                   <li class="dropdown user-menu">
                     <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                      <img src="assets/img/user/user.png" class="user-image" alt="User Image" />
+                      <img src="../assets/img/user/user.png" class="user-image" alt="User Image" />
                       <span class="d-none d-lg-inline-block">Abdus Salam</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <!-- User image -->
                       <li class="dropdown-header">
-                        <img src="assets/img/user/user.png" class="img-circle" alt="User Image" />
+                        <img src="../assets/img/user/user.png" class="img-circle" alt="User Image" />
                         <div class="d-inline-block">
                           Abdus Salam <small class="pt-1">iamabdus@gmail.com</small>
                         </div>
@@ -788,7 +788,7 @@
 										<div class="profile-content-left pt-5 pb-3 px-3 px-xl-5">
 											<div class="card text-center widget-profile px-0 border-0">
 												<div class="card-img mx-auto rounded-circle">
-													<img src="assets/img/user/u6.jpg" alt="user image">
+													<img src="../assets/img/user/u6.jpg" alt="user image">
 												</div>
 												<div class="card-body">
 													<h4 class="py-2 text-dark">Albrecht Straub</h4>
@@ -854,7 +854,7 @@
 												<div class="tab-pane fade show active" id="timeline" role="tabpanel" aria-labelledby="timeline-tab">
 													<div class="media mt-5 profile-timeline-media">
 														<div class="align-self-start iconbox-45 overflow-hidden mr-3">
-															<img  src="assets/img/user/u3.jpg" alt="Generic placeholder image">
+															<img  src="../assets/img/user/u3.jpg" alt="Generic placeholder image">
 														</div>
 														<div class="media-body">
 															<h6 class="mt-0 text-dark">Larissa Gebhardt</h6>
@@ -863,19 +863,19 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 																magna aliqua. ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
 															<div class="d-inline-block rounded overflow-hidden mt-4 mr-0 mr-lg-4">
-																<img src="assets/img/products/pa1.jpg" alt="Product">
+																<img src="../assets/img/products/pa1.jpg" alt="Product">
 															</div>
 															<div class="d-inline-block rounded overflow-hidden mt-4 mr-0 mr-lg-4">
-																<img src="assets/img/products/pa2.jpg" alt="Product">
+																<img src="../assets/img/products/pa2.jpg" alt="Product">
 															</div>
 															<div class="d-inline-block rounded overflow-hidden mt-4 mr-0 mr-lg-4">
-																<img src="assets/img/products/pa3.jpg" alt="Product">
+																<img src="../assets/img/products/pa3.jpg" alt="Product">
 															</div>
 														</div>
 													</div>
 													<div class="media mt-5 profile-timeline-media">
 														<div class="align-self-start iconbox-45 overflow-hidden mr-3">
-															<img  src="assets/img/user/u4.jpg" alt="Generic placeholder image">
+															<img  src="../assets/img/user/u4.jpg" alt="Generic placeholder image">
 														</div>
 														<div class="media-body">
 															<h6 class="mt-0 text-dark">Walter Reuter</h6>
@@ -888,7 +888,7 @@
 													</div>
 													<div class="media mt-5 profile-timeline-media">
 														<div class="align-self-start iconbox-45 overflow-hidden mr-3">
-															<img  src="assets/img/user/u7.jpg" alt="Generic placeholder image">
+															<img  src="../assets/img/user/u7.jpg" alt="Generic placeholder image">
 														</div>
 														<div class="media-body">
 															<h6 class="mt-0 text-dark">Albrecht Straub</h6>
@@ -897,13 +897,13 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 																magna aliqua. ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
 															<div class="d-inline-block rounded overflow-hidden mt-4 mr-0 mr-lg-4">
-																<img src="assets/img/products/pa4.jpg" alt="Product">
+																<img src="../assets/img/products/pa4.jpg" alt="Product">
 															</div>
 														</div>
 													</div>
 													<div class="media mt-5 profile-timeline-media">
 														<div class="align-self-start iconbox-45 overflow-hidden mr-3">
-															<img  src="assets/img/user/u8.jpg" alt="Generic placeholder image">
+															<img  src="../assets/img/user/u8.jpg" alt="Generic placeholder image">
 														</div>
 														<div class="media-body">
 															<h6 class="mt-0 text-dark">Selena Wagner</h6>
@@ -912,10 +912,10 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 																magna aliqua. ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
 															<div class="d-inline-block rounded overflow-hidden mt-4 mr-0 mr-lg-4">
-																<img src="assets/img/products/pa5.jpg" alt="Product">
+																<img src="../assets/img/products/pa5.jpg" alt="Product">
 															</div>
 															<div class="d-inline-block rounded overflow-hidden mt-4 mr-0 mr-lg-4">
-																<img src="assets/img/products/pa6.jpg" alt="Product">
+																<img src="../assets/img/products/pa6.jpg" alt="Product">
 															</div>
 														</div>
 													</div>
@@ -956,16 +956,16 @@
     </div>
   </div>
 
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
+  <script src="../assets/plugins/jquery/jquery.min.js"></script>
 
 
 
-<script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
-<script src="assets/plugins/jekyll-search.min.js"></script>
+<script src="../assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
+<script src="../assets/plugins/jekyll-search.min.js"></script>
 
 
 
-<script src="assets/js/sleek.bundle.js"></script>
+<script src="../assets/js/sleek.bundle.js"></script>
 
 </body>
 
